# HuffHuff

./: README.md  huffhuff.py  pyproject.toml  test_huffhuff.py
huffhuff/: encoded-playing-cards  main.py
sample_files/: playing-cards.txt
tests/: test_huffhuff.py
