[tool.poetry]
name = "huffhuff"
version = "0.1.1"
description = "A Huffman encoder/decoder script for compressing non-binary files"
license = "MIT"
authors = ["WillDenby <119456795+WillDenby@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/WillDenby/huffhuff"

[tool.poetry.dependencies]
python = "^3.12"
bitarray = "^2.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
